COMPLETE: geometric distribution

--- a/lotto_5_35_advanced.ipynb
+++ b/lotto_5_35_advanced.ipynb
@@ -3186,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "3243ebdb",
    "metadata": {},
    "outputs": [],
@@ -3225,7 +3225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 149,
    "id": "30171a6f",
    "metadata": {},
    "outputs": [
@@ -3235,7 +3235,7 @@
        "120"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3255,7 +3255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "8a61e6ad",
    "metadata": {},
    "outputs": [
@@ -3264,12 +3264,7 @@
      "output_type": "stream",
      "text": [
       "Processing 1/120: ('x_1', 'x_2', 'x_3', 'x_4', 'x_5')\n",
-      "[75.64848485 63.57529232 53.42893253 44.90189078 37.73573043 31.71326032\n",
-      " 26.65195211 22.39840824 18.82371278 15.81952428 13.29479212 11.17299701\n",
-      "  9.38983183  7.89125261  6.63184058  5.57342562  4.68392941  3.9363932\n",
-      "  3.30816075  2.78019166  2.3364843   1.96359085  1.65020968  1.38684289\n",
-      "  1.16550836  0.97949794  0.82317403  0.69179878  0.58139049  0.48860291\n",
-      "  0.41062386  0.34508995  0.29001499  0.24372977  0.20483148]\n"
+      "[1, 0.5485232067510548, 0.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -3277,17 +3272,18 @@
     "for i, per in enumerate(ALL_PERMUTATIONS[:1], start=1):\n",
     "    print(f\"Processing {i}/{len(ALL_PERMUTATIONS)}: {per}\")\n",
     "\n",
-    "    conditional_possibility = [0.0 for _ in range(len(ORIGINAL_PERMUTATIONS))]\n",
+    "    conditional_possibility = [1] + [0.0 for _ in range(len(ORIGINAL_PERMUTATIONS))]\n",
     "\n",
-    "    for i, ball in enumerate(per, start=1):\n",
-    "        distribution = SETTINGS[ball][\"distribution\"]\n",
-    "        n_highest = SETTINGS[ball][\"n_highest\"]\n",
-    "        n_outlier = SETTINGS[ball][\"n_outlier\"]\n",
+    "    for j, ball_column in enumerate(per, start=1):\n",
+    "        distribution = SETTINGS[ball_column][\"distribution\"]\n",
+    "        n_highest_threshold = SETTINGS[ball_column][\"n_highest\"]\n",
+    "        n_outlier_threshold = SETTINGS[ball_column][\"n_outlier\"]\n",
     "\n",
     "        if distribution == \"geometric\":\n",
+    "            hist_data = np.bincount(cleaned_df[ball_column].values, minlength=36)[1:]\n",
     "            data = np.repeat(\n",
     "                list(range(1, 36)),\n",
-    "                np.bincount(cleaned_df[ball].values, minlength=36)[1:],\n",
+    "                hist_data,\n",
     "            )\n",
     "            total_observations = len(data)\n",
     "\n",
@@ -3296,9 +3292,35 @@
     "\n",
     "            x_vals = list(range(1, 36))\n",
     "\n",
+    "            # Fit a geometric distribution\n",
     "            expected_probs = stats.geom.pmf(x_vals, p_hat)\n",
-    "            expected = expected_probs * total_observations\n",
-    "            print(expected)"
+    "\n",
+    "            # Find expected value\n",
+    "            expected_value = expected_probs * total_observations\n",
+    "\n",
+    "            # Find n highest values\n",
+    "            n_highest = np.argsort(hist_data)[-n_highest_threshold:][::-1] + 1\n",
+    "\n",
+    "            # Find n outlier values\n",
+    "            valid_indices = np.where(hist_data > expected_value)[0]\n",
+    "            n_outlier = (\n",
+    "                valid_indices[np.argsort(hist_data[valid_indices])[::-1]][\n",
+    "                    :n_outlier_threshold\n",
+    "                ]\n",
+    "                + 1\n",
+    "            )\n",
+    "\n",
+    "            final_balls = list(set(np.concatenate((n_highest, n_outlier))))\n",
+    "\n",
+    "            final_count_dict = {}\n",
+    "            final_freq_dict = {}\n",
+    "            for ball in final_balls:\n",
+    "                final_count_dict[ball] = hist_data[ball - 1]\n",
+    "                final_freq_dict[ball] = hist_data[ball - 1] / total_observations\n",
+    "\n",
+    "            conditional_possibility[j] = conditional_possibility[j - 1] * (\n",
+    "                sum(final_count_dict.values()) / total_observations\n",
+    "            )"
    ]
   },
   {
